# Draft

./: .gitignore  CMakeLists.txt  README.md
Boot/boot/grub/: grub.cfg
Boot/boot/grub/i386-pc/: eltorito.img
Bootloader/: MainBoot.c
DebugUtil/: DebugUtil.c  KernelAssert.c
DescriptorTable/: DescriptorUtil.c
ElfFile/: ELFSymbol.c  MultibootElfSection.c
Include/Bootloader/: MainBoot.h  MultibootElfSection.h  MultibootHeader.h  MultibootInfomation.h  MultibootMemoryMap.h
Include/DebugTool/: DebugUtil.h  KernelAssert.h
Include/Elf/: ELFUtil.h
Include/GlobalDescriptor/: DescriptorUtil.h
Include/Interrupt/: InterruptController.h  InterruptService.h  InterruptStatus.h
Include/Kernel/: CarbonDefine.h  CarbonKernelPrintUtil.h  KernelInlineAssembly.h
Include/Memory/: PhysicalMemory.h
Include/RuntimeLibrary/: StringLibrary.h
InterruptDescriptor/: InterruptController.c  InterruptDescriptorControl.c  InterruptServiceRoutine.c  InterruptStatus.c
Kernel/: MainKernel.c
KernelLibrary/: KenrelPrintUtil.c  KernelInlineAssembly.c  KernelPrint.c
Memory/: PhysicalMemory.c
RuntimeLibrary/: StringLibrary.c
Script/: link.ld
Tool/: bochsrc.bxrc  gdbinit
